--- a/src/static/style.css
+++ b/src/static/style.css
@@ -33,3 +33,15 @@ h2,
 h3 {
     margin: 0;
 }
+
+footer {
+    color: var(--white);
+    font-weight: 500;
+    text-align: center;
+    margin-top: 24px;
+    margin-bottom: 12px;
+}
+
+footer::after {
+    content: " ♥";
+}
