--- a/src/views/base.ejs
+++ b/src/views/base.ejs
@@ -3,23 +3,31 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="description" content="Answers for your kahoot test" />
+        <meta
+            name="keywords"
+            content="kahoot answers, hack, bot, kh answers, answers"
+        />
+        <meta name="og:title" content="Kahoot answers" />
+        <meta name="og:type" content="website" />
+        <meta name="og:image" content="/static/banner.png" />
+        <meta name="og:site_name" content="KH Answers" />
+        <meta
+            name="og:description"
+            content="Get kahoot answers for kahoot test"
+        />
+
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
-            rel="stylesheet"
-        />
-        <link rel="stylesheet" href="/static/style.css" />
-        <link rel="stylesheet" href="/static/<%{{ css }}%>.css" />
+        <link rel="stylesheet" href="/static/css/montserrat.css" />
+        <link rel="stylesheet" href="/static/css/style.css" />
+        <link rel="stylesheet" href="/static/css/<%{{ css }}%>.css" />
         <link
             rel="shortcut icon"
-            href="/static/images/logo.svg"
+            href="/static/images/icon.svg"
             type="image/svg+xml"
         />
         <script src="/static/js/<%{{ js }}%>.js" defer></script>
-        <title>Kahoot Answers</title>
+        <title>KH Answers / <%{{ title }}%></title>
     </head>
     <body>
         <%{{ content }}%>
