--- a/src/views/game.ejs
+++ b/src/views/game.ejs
@@ -74,7 +74,8 @@
         <% }) %>
     </div>
 
-    <table class="users" id="users" cellspacing="0" cellpadding="0">
+    <div class="users" id="users">
+        <div class="soon">Will be available soon</div>
         <!-- <thead>
             <tr>
                 <th>Name</th>
@@ -91,6 +92,6 @@
                 <td>10000</td>
             </tr>
         </tbody> -->
-    </table>
+    </div>
 </div>
 <%} %> <%{ css %>game<%} %> <%{ title %><%= pin %> <%} %> <%{ js %>game<%} %>
