--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,6 +11,6 @@
         pattern="^(([0-9]{8})|([0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}_\d{13})|(((http|https):\/\/)?kahoot.it\/challenge\/\d{8}(\?challenge-id=[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}_\d{13,})?)|(((http|https):\/\/)?kahoot.it\/challenge\/[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}_\d{13,}))$"
         required
     />
-    <button type="submit" class="enter">Enter</button>
+    <button type="submit" class="enter">View answers</button>
 </div>
 <%} %> <%{ css %>home<%} %> <%{ js %>home<%} %>
