--- a/src/views/base.ejs
+++ b/src/views/base.ejs
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta
+            name="google-site-verification"
+            content="jT-ZsL7PxNvkeY2D6XbqNmVacjk9VRI1XKHSUuJmyYc"
+        />
         <meta charset="UTF-8" />
         <meta name="description" content="Answers for your kahoot test" />
         <meta
