--- a/src/views/base.ejs
+++ b/src/views/base.ejs
@@ -30,8 +30,9 @@
             href="/static/images/icon.svg"
             type="image/svg+xml"
         />
-        <!-- <script src="/static/js/challengeService.js" defer></script> -->
-        <script type="module" src="/static/js/<%{{ js }}%>.js" defer></script>
+        <script src="/static/js/challengeService.js" defer></script>
+        <script src="/static/js/formatDate.js" defer></script>
+        <script src="/static/js/<%{{ js }}%>.js" defer></script>
 
         <title>KH Answers / <%{{ title }}%></title>
     </head>
