--- a/src/views/base.ejs
+++ b/src/views/base.ejs
@@ -13,7 +13,7 @@
         />
         <meta name="og:title" content="Kahoot answers" />
         <meta name="og:type" content="website" />
-        <meta name="og:image" content="/static/banner.png" />
+        <meta name="og:image" content="/static/images/banner.png" />
         <meta name="og:site_name" content="KH Answers" />
         <meta
             name="og:description"
